objects/Project_Risk_Assessment_Form__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Code__c</fullName>
        <label>Client Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N700000028P25EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conflict_Check_Performed__c</fullName>
        <label>Conflict Check Performed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Project Risk Assessment Forms</relationshipLabel>
        <relationshipName>R00N70000002Bc5gEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <inlineHelpText>Enter date conflict check was completed</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Peer_Reviewer__c</fullName>
        <label>External Peer Reviewer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Risk_Sensitivity_Conditions_Present__c</fullName>
        <inlineHelpText>HR = High Risk
HS = High Sensitivity</inlineHelpText>
        <label>High Risk/Sensitivity Conditions Present</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR(+)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS(+)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A (2C)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Consultant_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Consultant/Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028P2UEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_P__c</fullName>
        <label>Pre-Release Peer Reviewer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Peer_Reviewers__c</fullName>
        <label>Other Peer Reviewers</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Release_Peer_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Pre-Release Peer Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028P2ZEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Providing_External_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal Providing External Review</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028P9KEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Identification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Identification</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N700000028PDVEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Risk_Assessment_Statement__c</fullName>
        <formula>&quot;I am familiar with this project and client, and verify that:&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Risk Assessment Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Risk_Level__c</fullName>
        <label>Project Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Risk_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Risk Sign-Off</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028P6gEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Oversight_Requirement__c</fullName>
        <inlineHelpText>RM Oversight is required for certain clients with non-standard CSA provisions. (See Chapter II.D of Health Dicipline Quality and Risk Management Standards.)</inlineHelpText>
        <label>RM Oversight Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A (2C)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_for_this_Project__c</fullName>
        <inlineHelpText>Applicable where either HR or HS conditions are present, or (b) RM Oversight is required.  Where additional external reveiw is required, please also secure a completed Review Form from the external high level reviewer.</inlineHelpText>
        <label>Required for this Project?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_A__c</fullName>
        <formula>&quot;(a) The above risk assignments have been appropriately made according to the Health Dicipline&apos;s Quality and Risk Management Standards; and&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Assessment A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_B__c</fullName>
        <formula>&quot;The appropriate contractual risk protections are in place.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Assessment B</label>
        <type>Text</type>
    </fields>
    <label>Project Risk Assessment Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Client_Name__c</columns>
        <columns>NAME</columns>
        <columns>Project_Identification__c</columns>
        <columns>Lead_Consultant_Signer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BHI_Project_Forms</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Contract__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Name__c</field>
            <operation>equals</operation>
            <value>Blue Health Intelligence</value>
        </filters>
        <label>BHI Project Forms</label>
    </listViews>
    <nameField>
        <label>Project Billing Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Risk Assessment Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>